# sync_record_package

./: .clang-format  CMakeLists.txt  README.md
3rd/: stream_tests.cpp
cmake/: Findffmpeg.cmake
src/capture_interface/: capture.hpp  capture_control.hpp  communication_i.hpp
src/clients/: capture_client.cpp  control.cpp  netclient.cpp  netclient.hpp
src/clients/audio/: CMakeLists.txt  audio_instance.cpp  audio_instance.hpp
src/clients/bitalino/: CMakeLists.txt  bitalino_instance.cpp  bitalino_instance.hpp  bitalino_reader.cpp  bitalino_reader.hpp
src/clients/control/: CMakeLists.txt  UiAppCore.cpp  UiAppCore.hpp  ui.qml  ui_back.cpp  ui_back.hpp  ui_control_client.cpp  ui_control_client.hpp
src/clients/eye_tracker/: CMakeLists.txt  pupil_eye_io.cpp  pupil_eye_io.hpp  pupil_eyetracker_instance.cpp  pupil_eyetracker_instance.hpp
src/clients/qt-control/: CMakeLists.txt  UiAppCore.cpp  UiAppCore.hpp  ui.qrc  ui_back.hpp
src/clients/sfml-control/: CMakeLists.txt  common_info_window.cpp  common_info_window.hpp  device_info_window.cpp  device_info_window.hpp  gui_entries.cpp  gui_entries.hpp  gui_input.cpp  gui_input.hpp  guilogger.cpp  guilogger.hpp  igui_object.hpp  moving_window.hpp  sfml_control_instance.cpp  sfml_control_instance.hpp
src/net/: netcomm.cpp  netcomm.hpp  sessions.cpp  sessions.hpp
src/protocols/: actions.hpp  options.proto  session.proto
src/server/: control_server.cpp  control_server.hpp  controlled_collection.cpp  controlled_collection.hpp  device_collection.cpp  device_collection.hpp  iserver.hpp  netcomm.cpp  netcomm.hpp  rec_client.cpp  rec_client.hpp  remote_control_client.cpp  remote_control_client.hpp  server.cpp  server_acceptor.cpp  server_acceptor.hpp  sessions.cpp  sessions.hpp
src/ui/: ImGuiFileDialog.cpp  app_launcher_ui.cpp  app_runner.cpp  app_runner.hpp  app_window.cpp  app_window.hpp
src/utils/: io.hpp
src/utils/ffmpeg_io/: CMakeLists.txt  exceptions.hpp  ffmpeg_io.cpp  ffmpeg_io.hpp  ffmpeg_reader.cpp  ffmpeg_reader.hpp  ffmpeg_writer.cpp  ffmpeg_writer.hpp  notified_dequeu.hpp
tests/: audio.json  audio_client_test.cpp  bitalino.json  client_test.cpp  device_collection_test.cpp  ffmpeg_tests.cpp  monitor.json  pupil.json  pupil_test.cpp  pupil_win32.json  server.json  server_test.cpp  testin.json  testmon.json
